@@ -1,8 +1,6 @@
 package ru.job4j.isp;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 import java.util.function.Consumer;
 
 import ru.job4j.tracker.ConsoleInput;
@@ -18,29 +16,40 @@ import ru.job4j.tracker.Input;
  * @version 0.1
  */
 public class MenuInit {
-    private IMenu menu;
+    private MenuParagraph menu;
     private Input input;
     private final Consumer<String> output;
     private String lvlOut = "----";
 
-    public MenuInit(IMenu menu, Input input, Consumer<String> output) {
+    public MenuInit(MenuParagraph menu, Input input, Consumer<String> output) {
         this.menu = menu;
         this.input = input;
         this.output = output;
     }
 
     public void show() {
-        this.showMenu(this.menu, 0);
+        List<MenuParagraph> result = new ArrayList<>();
+        StringBuilder sb = new StringBuilder();
+        int level = 0;
+        LinkedList<MenuLevel> nodeStack = new LinkedList<>();
+        nodeStack.push(new MenuLevel(menu, 0));
+        while (!nodeStack.isEmpty()) {
+            MenuLevel current = nodeStack.removeLast();
+            System.out.println(current);
+            current.getMenuParagraph().getChildren(true).forEach(x ->
+                    nodeStack.addLast(new MenuLevel(x, current.getLevel() + 1))
+            );//nodeStack::addLast);
+        }
     }
 
-    private void showMenu(IMenu menuP, int level) {
+    private void showMenu(MenuParagraph menuP, int level) {
         StringBuilder sb = new StringBuilder();
         for (int i = 0; i < level; i++) {
             sb.append(lvlOut);
         }
         output.accept(sb.toString() + menuP.toString());
         level++;
-        for (IMenu paragraph : menuP.getChildren()) {
+        for (MenuParagraph paragraph : menuP.getChildren()) {
             this.showMenu(paragraph, level);
         }
     }
@@ -51,11 +60,11 @@ public class MenuInit {
 
     }
 
-    private void choseMenu(IMenu menuP, String chose) {
+    private void choseMenu(MenuParagraph menuP, String chose) {
         if (chose.equals(menuP.getName())) {
             menuP.run();
         } else {
-            for (IMenu paragraph : menuP.getChildren()) {
+            for (MenuParagraph paragraph : menuP.getChildren()) {
                 this.choseMenu(paragraph, chose);
             }
         }
@@ -66,15 +75,19 @@ public class MenuInit {
         MenuParagraph menu = new MenuParagraph("Задача 1", "action_1", List.of(
                 new MenuParagraph("Задача 1.1.", "action_1_1", List.of(
                         new MenuParagraph("Задача 1.1.1.", "action_1_1_1", new ArrayList<>()),
-                        new MenuParagraph("Задача 1.1.2.", "action_1_1_2", new ArrayList<>()) {
-                            @Override
-                            public void run() {
-                                System.out.println("Задача 1.1.2. Метод run");
-                            }
-                        },
-                        new MenuParagraph("Задача 1.1.3.", "action_1_1_3", new ArrayList<>())
+                        new MenuParagraph("Задача 1.1.2.", "action_1_1_2", new ArrayList<>())
                 )),
-                new MenuParagraph("Задача 1.2.", "action_1_2", Collections.emptyList())
+                new MenuParagraph("Задача 1.2.", "action_1_2", List.of(
+                        new MenuParagraph("Задача 1.2.1", "action_1_2_1", List.of(
+                                new MenuParagraph("Задача 1.2.1.1", "action_1_2_1_1", new ArrayList<>())
+                        ))
+                )),
+                new MenuParagraph("Задача 1.3", "action_1_3", List.of(
+                        new MenuParagraph("Задача 1.3.1", "action_1_3_1", List.of(
+                                new MenuParagraph("Задача 1.3.1.1", "action_1_3_1_1", new ArrayList<>()),
+                                new MenuParagraph("Задача 1.3.1.2", "action_1_3_1_2", new ArrayList<>())
+                        ))
+                ))
         )) {
             @Override
             public void run() {
@@ -85,5 +98,33 @@ public class MenuInit {
         MenuInit menuInit = new MenuInit(menu, input, System.out::println);
         menuInit.show();
         menuInit.chose();
+    }
+}
+
+class MenuLevel {
+    private MenuParagraph menuParagraph;
+    private int level;
+
+    public MenuLevel(MenuParagraph menuParagraph, int level) {
+        this.menuParagraph = menuParagraph;
+        this.level = level;
+    }
+
+    public MenuParagraph getMenuParagraph() {
+        return menuParagraph;
+    }
+
+    public int getLevel() {
+        return level;
+    }
+
+    @Override
+    public String toString() {
+        StringBuilder result = new StringBuilder();
+        for (int i = 0; i < level; i++) {
+            result.append("----");
+        }
+        result.append(menuParagraph);
+        return result.toString();
     }
 }
